Landing-Page/styles.css
body {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
  font-family: "Roboto", sans-serif;
}

header {
  background-color: #1f2937;
  border-spacing: 0;
  padding: 1em 15em 1em 15em;
  display: flex;
  align-items: center;
}

nav {
  margin-left: auto;
}

header div#header {
  color: #f9faf8;
  font-size: 24px;
  font-weight: bold;
}

header nav ul.header-links {
  color: #e5e7eb;
  list-style: none;
  font-size: 18px;
}

header nav ul.header-links li {
  display: inline-block;
}

ul li {
  margin-left: 1em;
}

h1 {
  margin: 0;
}

.hero {
  background-color: #1f2937;
  padding: 1em 15em 1em 15em;
  display: flex;
  padding-bottom: 5em;
}

#hero1 {
  display: inline-block;
  max-width: 50%;
}

h1 {
  font-size: 48px;
  font-weight: extra-bold;
  color: #f9faf8;
}

.subtext {
  display: block;
  color: #e5e7eb;
  font-size: 18px;
}

button {
  background-color: #3882f6;
  padding: 0.2em 1.2em 0.2em 1.2em;
  color: white;
  border-radius: 0.5em;
  border: none;
}

.placeholder-image {
  max-width: 50%;
  background-color: grey;
  width: 100%;
  margin-left: 2em;
}

.placeholder-image#image {
  width: 100%;
  height: 100%;
}

section.information {
}

div.pic {
  border: solid;
  border-color: #3882f6;
  border-radius: 0.6em;
  width: 100px;
  height: 100px;
}

.information figure {
  display: inline-block;
}

